--- a/SoftRendering/SoftRendering.vcxproj.filters
+++ b/SoftRendering/SoftRendering.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="Matrix4x4.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
