--- a/SoftRendering/SoftRendering.vcxproj.filters
+++ b/SoftRendering/SoftRendering.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
