--- a/SoftRendering/SoftRendering.vcxproj.filters
+++ b/SoftRendering/SoftRendering.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="SRutility.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Canvas.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -57,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="SRutility.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Canvas.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
