--- a/SoftRendering/SoftRendering.vcxproj
+++ b/SoftRendering/SoftRendering.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="SRutility.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Window.h" />
     <ClInclude Include="Xmath.h" />
     <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="Vector3.h" />
@@ -168,6 +169,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="SRutility.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
